# crab-mitm

./: .gitignore  Cargo.toml  README.md  crab-mitm.example.toml
include/: crab_mitm.h
src/: ca.rs  config.rs  ffi.rs  lib.rs  main.rs  proxy.rs  rules.rs
src/proxy/: cert_portal.rs  inspect.rs  response.rs
tests/: integration_proxy.rs
