[package]
name = "crab-mitm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http1", "native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
mime_guess = "2.0"
pin-project-lite = "0.2"
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["std"] }
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
