[package]
name = "crab-mitm"
version = "1.1.0"
edition = "2024"

[features]
default = []
cli = ["dep:clap"]

[lib]
name = "crab_mitm"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "crab-mitm"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
clap = { version = "4.5", features = ["derive"], optional = true }
futures-util = "0.3"
http = "1.3"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["full"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "server", "server-auto", "http1", "http2", "tokio"] }
lru = "0.12"
mime_guess = "2.0"
pin-project = "1.1"
rcgen = { version = "0.13", features = ["x509-parser"] }
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
time = { version = "0.3", features = ["std"] }
tokio = { version = "1.47", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-rustls = "0.26"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
